--- a/src/main/resources/static/html/dashboard.html
+++ b/src/main/resources/static/html/dashboard.html
@@ -210,6 +210,26 @@
                     </div>
                 </div>
 
+                <div class="full comment_blog_line">
+
+                    <div class="row">
+                        <div class="col-md-1">
+                            <img src="../images/物品领用.png" alt="#"/>
+                        </div>
+                        <div class="col-md-9">
+                            <div class="full contact_text">
+                                <h3>领用检索</h3>
+                                <br>
+                                <p>检索药剂以及器械的领用信息
+                                </p>
+                            </div>
+                        </div>
+                        <div class="col-md-2">
+                            <a class="reply_bt" href="takelistManage.html">进入</a>
+                        </div>
+                    </div>
+                </div>
+
             </div>
         </div>
     </div>
