--- a/src/main/resources/static/html/log.html
+++ b/src/main/resources/static/html/log.html
@@ -153,7 +153,7 @@
         <div class="form-inline row">
             <input type="text" id="startData" class="form-control date-input" placeholder="开始日期" width="20%">
             <label class="date-label">&nbsp;&nbsp;--&nbsp;&nbsp;</label>
-            <input type="text" id="aendData" class="form-control date-input" placeholder="结束日期" width="20%">
+            <input type="text" id="endData" class="form-control date-input" placeholder="结束日期" width="20%">
             <label>&nbsp;&nbsp;</label>
             <button onclick="searchedTable($('#startData').val(),$('#endData').val())" type="button" id="submit"
                     class="btn btn-primary" style="margin-top:0">查询
