--- a/src/main/resources/static/html/medicationManage.html
+++ b/src/main/resources/static/html/medicationManage.html
@@ -246,7 +246,8 @@
             <button id="dSubmit"
                     class="btn btn-primary" style="margin-top:0;margin-right:1%">删除
             </button>
-            <button onclick="resetTable()" class="btn btn-primary" style="margin-top:0">重置</button>
+            <button onclick="resetTable()" class="btn btn-primary" style="margin-top:0;margin-right:1%">重置</button>
+            <a href="applyTakeMed.html"><button class="btn btn-primary" style="margin-top:0">申请领用</button></a>
 
         </div>
     </div>
