--- a/src/main/resources/static/html/expert.html
+++ b/src/main/resources/static/html/expert.html
@@ -44,8 +44,8 @@
     <script src="../bootstrap-table-master/js/bootstrap-table.js"></script>
     <script src="../bootstrap-table-master/js/bootstrap-table-zh-CN.js"></script>
     <script src="../js/expert.js"></script>
+    <script src="../js/logout.js"></script>
     <script src="../js/isLogin.js"></script>
-
 
 </head>
 <!-- body -->
@@ -83,9 +83,10 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="expert.html">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="#">药剂管理</a>
-                                            <a class="dropdown-item" style="color: black" href="#">小班管理</a>
-                                            <a class="dropdown-item" style="color: black" href="#">事件记录</a>
+                                            <a class="dropdown-item" style="color: black"
+                                               href="medication.html">药剂一览</a>
+                                            <a class="dropdown-item" style="color: black" href="team.html">小班管理</a>
+                                            <a class="dropdown-item" style="color: black" href="event.html">事件记录</a>
                                         </div>
                                     </div>
                                 </li>
@@ -98,8 +99,8 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="bug.html">虫害资料</a>
-                                            <a class="dropdown-item" style="color: black" href="#">病害资料</a>
-                                            <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="sickness.html">病害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="mouse.html">鼠害资料</a>
                                         </div>
                                     </div>
                                 </li>
