--- a/src/main/resources/static/html/takelistManage.html
+++ b/src/main/resources/static/html/takelistManage.html
@@ -80,10 +80,11 @@
                                             灾情防治
                                         </button>
                                         <div class="dropdown-menu">
-                                            <a class="dropdown-item" style="color: black" href="#">专家一览</a>
-                                            <a class="dropdown-item" style="color: black" href="medication.html">药剂一览</a>
-                                            <a class="dropdown-item" style="color: black" href="#">小班管理</a>
-                                            <a class="dropdown-item" style="color: black" href="#">事件记录</a>
+                                            <a class="dropdown-item" style="color: black" href="expert.html">专家一览</a>
+                                            <a class="dropdown-item" style="color: black"
+                                               href="medication.html">药剂一览</a>
+                                            <a class="dropdown-item" style="color: black" href="team.html">小班管理</a>
+                                            <a class="dropdown-item" style="color: black" href="event.html">事件记录</a>
                                         </div>
                                     </div>
                                 </li>
@@ -96,8 +97,8 @@
                                         </button>
                                         <div class="dropdown-menu">
                                             <a class="dropdown-item" style="color: black" href="bug.html">虫害资料</a>
-                                            <a class="dropdown-item" style="color: black" href="#">病害资料</a>
-                                            <a class="dropdown-item" style="color: black" href="#">鼠害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="sickness.html">病害资料</a>
+                                            <a class="dropdown-item" style="color: black" href="mouse.html">鼠害资料</a>
                                         </div>
                                     </div>
                                 </li>
