--- a/src/main/resources/static/html/index.html
+++ b/src/main/resources/static/html/index.html
@@ -8,7 +8,7 @@
       <meta name="viewport" content="width=device-width, initial-scale=1">
       <meta name="viewport" content="initial-scale=1, maximum-scale=1">
       <!-- site metas -->
-      <title>城市园林病虫害防治管理系统 CPPMS</title>
+      <title>城市园林病虫害防治管理系统 CGPMS</title>
       <meta name="keywords" content="">
       <meta name="description" content="">
       <meta name="author" content="">
@@ -65,8 +65,8 @@
                      <div class="limit-box">
                         <nav class="main-menu">
                            <ul class="menu-area-main">
-                              <li>
-                                 <a href="index.html" class="active">首页</a>
+                              <li class="active">
+                                 <a href="index.html">首页</a>
                               </li>
                               <li>
                                  <div class="dropdown">
