--- a/src/main/resources/static/html/applyTakeMed.html
+++ b/src/main/resources/static/html/applyTakeMed.html
@@ -8,7 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1">
     <!-- site metas -->
-    <title>领用申请 CPPMS</title>
+    <title>领用申请 CGPMS</title>
     <meta name="keywords" content="">
     <meta name="description" content="">
     <meta name="author" content="">
