--- a/src/main/resources/static/html/userConfig.html
+++ b/src/main/resources/static/html/userConfig.html
@@ -175,7 +175,7 @@
             <select id="level" class="form-control">
                 <option value="cj">超级管理员 (cj)</option>
                 <option value="zl">资料管理员 (zl)</option>
-                <option value="cj">灾情管理员 (zq)</option>
+                <option value="z1">灾情管理员 (zq)</option>
                 <option value="zj">专家 (zj)</option>
                 <option value="yj">药剂管理员 (yj)</option>
             </select>
